p2/confs/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one-deployment
spec:
  selector:
    matchLabels:
      app: app-one
  replicas: 1 # tells deployment to run 1 pods matching the template
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: app-one-html

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two-deployment
spec:
  selector:
    matchLabels:
      app: app-two
  replicas: 3 # tells deployment to run 1 pods matching the template
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: app-two-html
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three-deployment
spec:
  selector:
    matchLabels:
      app: app-three
  replicas: 1 # tells deployment to run 1 pods matching the template
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: app-three-html
