p2/confs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: app-one
        image: nginx:latest
        ports:
        - containerPort: 80
