p2/confs/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one-service
spec:
  selector:
    app: app-one
  ports:
    - protocol: TCP
      port: 80
  
---

apiVersion: v1
kind: Service
metadata:
  name: app-two-service
spec:
  selector:
    app: app-two
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app-three-service
spec:
  selector:
    app: app-three
  ports:
    - protocol: TCP
      port: 80
